--- a/Portfolio.css
+++ b/Portfolio.css
@@ -9,7 +9,7 @@
  --color-light: rgb(252, 130, 49);
 }
 *{
- border: 1px solid green;
+/*  border: 1px solid green; */
  font-family: montserrat;
  margin: 0;
  padding: 0;
