--- a/Portfolio.css
+++ b/Portfolio.css
@@ -1,363 +1,364 @@
-/* Montserrat font  */
 @import url("https://fonts.googleapis.com/css2?family=Cardo&family=Lato&family=Merriweather&family=Montserrat&family=PT+Serif&family=Poppins&family=Raleway&display=swap");
 
 :root{
- --black: #2b2d42;
- --gray: #8d99ae;
- --white: #f8f9fa;
- /* --color: rgb(0, 0, 0); */
- --color-light: rgb(252, 130, 49);
+ --black: #1f1f1f;
+ --gray: #464646;
+ --light-gray: #ccc;
+ --white: #f5f5f5;
+ --main-dark: #2C5F2D;
+ --main-light: #97BC62FF;
 }
 *{
-/*  border: 1px solid green; */
+ /* border: 1px solid red; */
  font-family: montserrat;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
- color: var(--white);
+ color: var(--black);
+ font-weight: 400;
+}
+*:focus{
+ transition: 0.3s;
+ outline: none;
+ box-shadow: 0 0 0px 3px var(--main-light) inset;
 }
 html{
  scroll-behavior: smooth;
 }
 body{
- overflow-x: hidden;
- background-color: #ccc;
- /* scroll-behavior: smooth; */
- /* display: flex; */
+ width: 100%;
+ background-color: var(--light-gray);
+ border-left: 10px solid var(--main-dark);
 }
-
-/* Scrollbar  */
-/* ::-webkit-scrollbar{
- width: 15px;
+.heading{
+ color: var(--gray);
+ font-weight: 600;
+ font-size: 2.5em;
+ font-family: poppins;
 }
-::-webkit-scrollbar-track{
- background-color: #ccc;
-}
-::-webkit-scrollbar-thumb{
- background-color: #48D1CC;
-} */
-
-/* Navigation bar */
-#navbar{
+section{
  display: flex;
- justify-content: flex-end;
+ flex-direction: column;
  align-items: center;
- /* border: 1px; */
+}
+
+/* Navbar */
+#nav-container{
  position: fixed;
  top: 0;
  left: 0;
- width: 100%;
- height: 75px;
- /* padding: 20px; */
- background-color: #464646;
- box-shadow: 0 0 40px 10px grey;
  z-index: 999;
-}
-
-#items{
+ padding: 0 4em;
  display: flex;
- /* border: 1px solid red; */
- /* height: 100%; */
- /* text-align: right; */
- margin: 0 50px;
- /* padding: 5px; */
+ justify-content: space-between;
+ background-color: var(--white);
+ width: 100%;
+ height: 10vh;
+ box-shadow: 0 0px 5px 1px var(--light-gray);
 }
-
-.nav-links{
+#navbar{
+ /* float: right; */
  display: flex;
- justify-content: center;
+ flex-direction: row;
+ justify-content: space-around;
  align-items: center;
- 
- /* height: auto; */
- /* width: 100px; */
- color: var(--white);
- text-decoration: none;
- font-size: 20px;
- margin: 0 15px;
- padding: 15px 15px;
- /* vertical-align: middle; */
- /* font-weight: bold; */
- /* font-family: montserrat; */
- border-radius: 10px;
+ height: 100%;
+ /* width: 30%; */
+ /* gap: max(15px); */
+ width: 27em;
 }
-.nav-links:hover{
+#logo-link{
+ margin: auto 0;
+ max-width: 3.5em;
+ max-height: 3.5em;
+ width: auto;
+ height: auto;
+}
+#logo{
+ width: 100%;
+ height: 100%;
+}
+.nav-item{
+ transition: 0.1s;
+ padding: 10px;
+ font-size: 1.3em;
+ color: var(--gray);
+ text-decoration: none;
+ font-family: poppins;
+}
+.nav-item:hover{
+ color: var(--main-light);
  transition: 0.3s;
- color: var(--color-light);
- /* text-decoration: underline; */
- /* transition: all 0.4s ease; */
- /* border-bottom: 3px solid var(--color-light); */
- /* background-color: var(--color-light); */
- 
 }
 
 /* Main section */
-#welcome-section{
+#main-section{
+ display: flex;
+ flex-direction: row;
+ justify-content: center;
+ align-items: center;
+ height: 90vh;
+ padding: 10em 4em;
+ margin-top: 10vh;
+}
+#main-content{
  display: flex;
  flex-direction: column;
- margin-top: 50px;
- padding: 20px;
- width: 100%;
- height: 100vh;
- text-align: center;
- justify-content: center;
- background-color: #ccc;
-}
-
-#welcome-section h1{
- color: #494a50;
-}
-
-#Mohamed-Mahgoub{
- font-family: raleway;
- font-size: 55px;
-}
-
-
-#Web-developer{
- font-size: 30px;
- font-style: italic;
- font-weight: lighter;
-}
-
-/* Projects section  */
-#projects{
- background-color: #464646;
- width: 90%;
- /* height: 880px; */
- height: auto;
- margin: 0 auto;
- border-radius: 20px;
- padding: 20px 0 60px 0;
- /* padding: 50px; */
-}
-
-h3{
- display: block;
- text-align: center;
- padding: 15px;
- font-size: 23px;
- font-family: poppins;
- font-weight: lighter;
- color: #ccc;
-}
-
-hr{
- display: block;
- margin: 0 auto 25px auto;
- background-color: #ccc;
- border: 1px solid #ccc;
- width: 90%;
- height: 1px;
-}
-
-.project-tile{
+ gap: 0.3em;
  /* border: 1px solid red; */
- margin: auto;
- width: 90%;
- /* border: 1px solid blue; */
- /* margin: auto; */
+ width: 40em;
+}
+#mohamed{
+ font-family: poppins;
+ font-size: 3em;
+ font-weight: 500;
+ 
+}
+h3{
+ font-size: 1.5em;
+ /* font-family: monospace; */
+}
+#welcome{
+ width: 30em;
+}
+
+/* Skills */
+#skills{
  display: flex;
- /* flex-direction: row; */
- justify-content: space-evenly;
- /* justify-content: center; */
- /* align-items: center; */
- /* display: grid;
- grid-template-columns: repeat(4, 20%); */
- /* align-content: center; */
+ flex-direction: column;
+ align-items: center;
+ background-color: var(--white);
+ padding: 2em 0;
+ padding-bottom: 3em;
+ gap: 2em;
+}
+#cards{
+ display: flex;
+ flex-direction: row;
+ width: 100%;
+ justify-content: space-around;
+ padding: 0 4em;
  flex-wrap: wrap;
- /* column-gap: 70px; */
- /* row-gap: 30px; */
- gap: 30px;
+ gap: max(2em);
+ row-gap: 5em;
 }
-
-.holder, img{
- border-radius: 20px;
-}
-
-.holder{
+.card{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
- /* grid-template-columns: 90% 10%; */
- background-color: var(--color);
-/* background: rgb(186,250,255);
-background: linear-gradient(0deg, rgba(186,250,255,1) 0%, rgba(0,196,208,1) 100%); */
- width: 320px;
- height: 340px;
- height: 350px;
- /* width: 20%; */
- margin: 20px 0;
- text-align: center;
- padding-top: 10px;
+ align-items: center;
+ padding: 2em 0;
  transition: 0.3s;
+ width: 17.5em;
+ height: 22.5em;
  /* border-radius: 10px; */
- /* white-space: nowrap; */
+ /* box-shadow: 0 0 5px 1px var(--gray); */
+ border: 1px solid var(--light-gray);
+}
+.card:hover{
+ transform: scale(1.05);
+ transition: 0.3s;
+ box-shadow: 0 0 20px 1px var(--light-gray);
+}
+.badge{
+ width: 80%;
+}
+.skill{
+ font-family: poppins;
+ /* font-weight: 600; */
+ font-size: 2em;
+ text-align: center;
+}
+
+/* Work */
+#work{
+ padding: 2em 0;
+ padding-bottom: 3em;
+ gap: 3em;
+ background-color: var(--main-light);
+}
+#work h2{
+ color: var(--black);
+}
+#projects{
+ display: flex;
+ flex-direction: row;
+ flex-wrap: wrap;
+ width: 90%;
+ justify-content: space-around;
+ row-gap: 3em;
+}
+.holder{
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ background-color: var(--black);
+ border-radius: 0.8em;
+ padding: 0 1em;
+ padding-top: 1em;
+ /* opacity: 0.8; */
 }
 .holder:hover{
- cursor: pointer;
- transform: scale(1.05);
- /* box-shadow: 0 0 40px -10px rgba(255, 255, 255, 0.8); */
+ cursor: default;
 }
-
-.project-tile img{
- width: 300px;
- height: 300px;
- /* width: 90%; */
- /* height: auto; */
+.holder a img{
+ width: 17.5em;
+ border-radius: 0.5em;
 }
-
 .holder p{
- height: 10%;
- margin-bottom: 0px;
- padding-bottom: 0px;
- font-size: 20px;
- font-family: poppins;
- /* font-family: montserrat; */
- /* font-weight: bold; */
+ padding: 0.3em 0;
+ padding-bottom: 0.5em;
+ font-size: 1.2em;
  color: var(--white);
 }
+.holder:hover > p::before{
+ content: "<";
+ color: var(--main-light);
+ margin: 0 0.2em;
+ font-family: poppins;
+ font-size: 0.8em;
+ /* font-weight: 600; */
+}
+.holder:hover > p::after{
+ /* transition: 1s; */
+ content: "/>";
+ color: var(--main-light);
+ margin: 0 0.2em;
+ font-family: poppins;
+ font-size: 0.8em;
+ /* font-weight: 600; */
+}
 
-/* Contact-me */
+/* Contact */
 #contact{
  display: flex;
  flex-direction: column;
- justify-content: space-evenly;
+ padding: 2em 0;
+ background-color: var(--black);
+ gap: 3em;
+}
+#contact .heading{
+ color: var(--white);
+}
+#contact-content{
  width: 100%;
- height: 200px;
- margin: 60px auto 0 auto; 
- background-color: #464646;
- /* padding-top: 20px; */
-}
-
-#contact h1{
- text-align: center;
- color: white;
- font-family: poppins;
- font-weight: lighter;
- font-size: 40px;
-}
-
-#social{
- display: block;
- text-align: center;
- /* margin-top: 15px; */
-}
-
-#contact a{
- /* display: block; */
- /* color: white; */
- text-decoration: none;
- /* border: 1px solid white; */
- padding: 10px;
-}
-#contact a:hover{
- background-color: var(--color);
- border: 1px solid var(--color);
- transition: 0.4s;
- color: #464646;
-}
-
-
-
-@keyframes blink {
- 0%{opacity: 1;}
- 40%{opacity: 1;}
- 60%{opacity: 0;}
- 100%{opacity: 0;}
-}
-
-#txt{
  display: flex;
- justify-content: center;
+ flex-direction: row;
+ justify-content: space-around;
  align-items: center;
 }
-.sent{
- color: var(--black);
-font-family: raleway;
- font-size: 55px;
+input, textarea, button{
+ transition: 0.3s;
+ font-size: 1em;
+ height: 3em;
+ /* outline: none; */
+ border: none;
+ border-radius: 0;
+ padding: 0.3em 0.5em;
 }
-.cursor{
- animation: blink .4s linear infinite alternate;
- display: inline-block;
- width: 8px;
- height: 55px;
- background-color: var(--color-light);
- margin-left: 8px;
- /* z-index: -1; */
+#grid{
+ display: grid;
+ grid-template-rows: 1fr 1fr 3fr 2fr;
+ grid-template-columns: 1fr 1fr;
+ gap: 0.2em;
+ width: 50%;
 }
-
-.holder:hover > p::before{
- content: '<';
- /* transition: 3s; */
- color: var(--color-light);
- margin: 5px;
+#subject, #message{
+ grid-column-start: 1;
+ grid-column-end: 3;
 }
-.holder:hover > p::after{
- content: '/>';
- color: var(--color-light);
- margin: 5px;
+#message{
+ height: 9em;
+ padding-top: 0.6em;
 }
-/* p:hover::before{
- content: '<';
- color: var(--color-light);
- margin: 5px;
+button{
+ margin-top: 0.3em;
+ grid-column-start: 1;
+ grid-column-end: 2;
+ color: var(--white);
+ background-color: transparent;
+ border: 1px solid var(--white);
 }
-p:hover::after{
- content: '/>';
- color: var(--color-light);
- margin: 5px;
-} */
-
+button:hover{
+ cursor: pointer;
+ color: var(--main-dark);
+ background-color: var(--main-light);
+ border: 1px solid var(--main-light);
+}
+#social{
+ display: flex;
+ flex-direction: column;
+ gap: 0.5em;
+ width: 20em;
+ margin-bottom: 7em;
+ margin-left: -7em;
+}
+.social-divs{
+ display: flex;
+ flex-direction: row;
+ align-items: center;
+}
+.social-divs h3{
+ color: var(--white);
+ font-size: 1.2em;
+}
+.social-divs i{
+ font-size: 1.5em;
+ margin-right: 0.2em;
+}
+#icons{
+ display: grid;
+ grid-template-rows: 4em 4em;
+ grid-template-columns: 4em 4em;
+ gap: 0.5em;
+}
 i{
  transition: .5s;
- font-size: 50px;
+ font-size: 4em;
+ color: var(--white);
 }
 i:hover{
  cursor: pointer;
- color: var(--color-light);
+ color: var(--main-light);
  transition: .3s;
- transform: translateY(-10px);
+ margin-right: 0.5em;
 }
+/* a i:hover ~ h3{
+ cursor: pointer;
+ color: var(--main-light);
+ transition: .3s;
+ transform: translateX(0.5em); 
+} */
+ /* a h3:hover ~ i{
+  cursor: pointer;
+  color: var(--main-light);
+  transition: .3s;
+  transform: translateX(0.5em);
 
-/* Media-queries */
-@media all and (max-width: 600px){
- #navbar{
-  width: 100%;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-  margin: auto;
- }
- #projects{
-  width: 100%;
-  border-radius: 0;
- }
- /* .holder, .holder img{
-  width: 70vw;
  } */
- .cursor{
-  display: none;
+ 
+ .space{
+  font-size: 1px;
+  height: 1px;
  }
- #items{
-  margin: auto;
-  width: 90%;
-  justify-content: space-between;
- }
- .nav-links{
-  margin: auto;
- }
-}
-@media all and (max-width: 350px){
- #items{
-  width: 100%;
- }
-}
 
-#proj{
- /* display: ; */
- height: 10px;
- color: red;
- width: 100px;
- background-color: #ccc;
- margin-bottom: 80px;
+#main-btn{
+ transition: 0.2s;
+ text-decoration: none;
+ color: var(--black);
+ background-color: var(--main-light);
+ /* border: 1px solid var(--main-dark); */
+ padding: 0.5em;
+ width: 9em;
+ text-align: center;
+ border-radius: 1em;
+ /* font-weight: 600; */
+ font-size: 1.2em;
+ margin-top: 0.5em;
+ font-family: poppins;
+ opacity: 0.8;
+}
+#main-btn:hover{
+ transition: 0.3s;
+ opacity: 1;
 }
