--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@
 *:focus{
  transition: 0.3s;
  outline: none;
- box-shadow: 0 0 0px 3px var(--main-light) inset;
 }
+
 html{
  scroll-behavior: smooth;
 }
@@ -80,17 +80,37 @@ section{
  height: 100%;
 }
 .nav-item{
+ position: relative;
  transition: 0.1s;
- padding: 10px;
+ padding: 5px;
+ padding-bottom: 4px;
  font-size: 1.3em;
  color: var(--gray);
  text-decoration: none;
  font-family: poppins;
  /* letter-spacing: 1px; */
 }
+.nav-item::after{
+ content: "";
+ position: absolute;
+ width: 100%;
+ height: 3px;
+ background-color: var(--main-light);
+ left: 0;
+ bottom: 0;
+ transform: scale(0, 1);
+ transition: 0.2s;
+ transform-origin: 0 100%;
+}
 .nav-item:hover{
  color: var(--main-light);
  transition: 0.3s;
+ /* transform: scale(1, 1); */
+}
+.nav-item:hover::after{
+ color: var(--main-light);
+ transition: 0.3s;
+ transform: scale(1, 1);
 }
 
 .burger{
@@ -243,6 +263,7 @@ h3{
  margin: 0 0.3em;
  font-family: comfortaa;
  font-size: 0.8em;
+ /* transition: 0.5s; */
  /* font-weight: 600; */
 }
 .holder:hover > p::after{
@@ -281,6 +302,9 @@ input, textarea, button{
  border: none;
  border-radius: 0;
  padding: 0.3em 0.5em;
+}
+input:focus, textarea:focus, button:focus{
+ box-shadow: 0 0 0px 3px var(--main-light) inset;
 }
 #grid{
  display: grid;
